--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   ],
   "dependencies": {
     "angular-bootstrap": "~0.12.1",
-    "angular-select2": "~1.3.9"
+    "angular-select2": "~1.3.9",
+    "angular": "~1.3.15"
   }
 }
