--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "angular-bootstrap": "~0.12.1",
     "angular-select2": "~1.3.9",
-    "angular": "~1.3.15"
+    "angular": "~1.3.15",
+    "angular-resource": "~1.3.15"
   }
 }
