--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,8 @@
     "angular-select2": "~1.3.9",
     "angular": "~1.3.15",
     "angular-resource": "~1.3.15",
-    "bootstrap": "3.3.4"
+    "bootstrap": "3.3.4",
+    "font-awesome": "~4.3.0",
+    "css-spinners": "~1.0.3"
   }
 }
