--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "angular-resource": "~1.3.15",
     "bootstrap": "3.3.4",
     "font-awesome": "~4.3.0",
-    "css-spinners": "~1.0.3"
+    "css-spinners": "~1.0.3",
+    "ng-context-menu": "~1.0.1"
   }
 }
